@@ -1,3 +1,1 @@
-[mediaplayerhomeapplet.desktop]
-X-Desktop-File=@hildonhomedesktopentrydir@/mediaplayerhomeapplet.desktop
 
